--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,16 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TFG"
+        android:theme="@style/Theme.ChangeHome"
         tools:targetApi="31">
 
         <!-- LoginActivity como actividad principal -->
@@ -44,6 +45,19 @@
         <!-- CreateViviendaActivity -->
         <activity
             android:name=".CreateViviendaActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <!-- ChatActivity -->
+        <activity
+            android:name=".ChatActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
+
+        <!-- InitializeTestDataActivity -->
+        <activity
+            android:name=".InitializeTestDataActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
